fix: dark mode button design

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -270,3 +270,10 @@ html.dark-mode-body {
 .dark-mode-body .search-result .url {
     color: #cccccc;
 }
+
+.dark-mode-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
